--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 
         <ul>
             <li>
-                <a href="./sixiazhuan/">四侠传：Legend of the Four Heroes</a> (name pending)
+                <a href="./baoyu/">暴雨中：In Torrential Rains</a> 
             </li>
             <li>
-                <a href="./baoyu/">暴雨中：In Torrential Rains</a> (name pending)
+                <a href="./sixiazhuan/">四侠传：Legend of the Four Heroes</a> (name pending)
             </li>
+            
             <!-- <li>
                 <a href="./laolongcheng/">夕阳通天〔老龙城〕：Light of Dusk Fills the Heavens</a> (name tentative)
             </li> -->
