add in 160 missing

--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -256,7 +256,9 @@
         <li><a href="./story/157.html">The Water Recedes, Revealing the Stones</a></li>
         <li><a href="./story/158.html">Gifting Poems</a></li>
         <li><a href="./story/159.html">The Straight-as-Iron Li Yuchun</a></li>
-        <li><a href="./story/160.html">Buying a House</a></li>
+        <li><a href="./story/160.html">Xu Qi’an’s Diary</a></li>
+        <li><a href="./story/161.html">Buying a House</a></li>
+        <li><a href="./story/162.html">Mighty Heavenly Dragon</a></li>
     </ol>
 
     <hr>
