--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -259,6 +259,7 @@
         <li><a href="./story/160.html">Xu Qi’an’s Diary</a></li>
         <li><a href="./story/161.html">Buying a House</a></li>
         <li><a href="./story/162.html">Mighty Heavenly Dragon</a></li>
+        <li><a href="./story/162.html">The Traitor's Hand</a></li>
     </ol>
 
     <hr>
