--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -259,7 +259,8 @@
         <li><a href="./story/160.html">Xu Qi’an’s Diary</a></li>
         <li><a href="./story/161.html">Buying a House</a></li>
         <li><a href="./story/162.html">Mighty Heavenly Dragon</a></li>
-        <li><a href="./story/162.html">The Traitor's Hand</a></li>
+        <li><a href="./story/163.html">The Traitor's Hand</a></li>
+        <li><a href="./story/164.html">A Startling Discovery</a></li>
     </ol>
 
     <hr>
