--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -261,6 +261,7 @@
         <li><a href="./story/162.html">Mighty Heavenly Dragon</a></li>
         <li><a href="./story/163.html">The Traitor's Hand</a></li>
         <li><a href="./story/164.html">A Startling Discovery</a></li>
+        <li><a href="./story/165.html">An Opportunity to Turn the Tides</a></li>
     </ol>
 
     <hr>
