--- a/dagengren/story/164.html
+++ b/dagengren/story/164.html
@@ -27,7 +27,7 @@
     <div class="double" id="double">
         # 164. A Startling Discovery
 
-        *Fuck me… the old agent wasn’t lying, this ghost really bloody looks like this…* Xu Qi’an’s heart lurched in fright.
+        *Fuck me… the old broker wasn’t lying, this ghost really bloody looks like this…* Xu Qi’an’s heart lurched in fright.
         
         However he wasn’t really scared, the frightened start was merely an instinctive reaction of someone who was once an ordinary person, seeing a ghost in real life. After all, he was the type who after watching a horror movie would be too scared to go to the toilet, and not being able to hold it in any longer, had to relieve himself into an empty coke bottle.
         
