--- a/dagengren/story/163.html
+++ b/dagengren/story/163.html
@@ -129,7 +129,7 @@ Just then, a lurch came from within his heart.
 
 Without a change in expression, he stopped eating, took out the small jade mirror, and looked at its contents.
 
-((ONE: There’s been an incident in the Nightwatchers. The Gold Gong Zhu Yang reported Wei Yuan for embezzlement and corruption, this case involves four Gold Gongs, twelve Silver Gongs, and three Bronze Gongs, to be investigated by the prefecture, the Ministry of Law, and the High Court. Does this mean that Wei Yuan is about to lose favour, and will fall this year?))
+【ONE: There’s been an incident in the Nightwatchers. The Gold Gong Zhu Yang reported Wei Yuan for embezzlement and corruption, this case involves four Gold Gongs, twelve Silver Gongs, and three Bronze Gongs, to be investigated by the prefecture, the Ministry of Law, and the High Court. Does this mean that Wei Yuan is about to lose favour, and will fall this year?】
 
 *Zhu Yang has betrayed Wei Yuan… reported so many people…* Xu Qi’an looked intently at the words written on the mirror’s surface, as raging waves crashed around in his mind.
 
@@ -149,13 +149,13 @@ He originally thought that the Nightwatchers had a special position at court, an
 
 In the brief moment of time that Xu Qi’an was thinking, the once court official number Four had already replied: ((FOUR: Embezzlement and corruption is merely an excuse, if we really talk about embezzlement and corruption, the Nightwatchers are controlled by Wei Yuan, how could their table manners be any worse than the bird-and-beast clothed officials?
 
-((Emperor Yuanjing is merely taking this as an opportunity to knock Wei Yuan down a peg.))
+【Emperor Yuanjing is merely taking this as an opportunity to knock Wei Yuan down a peg.】
 
 *Four is indeed an old experienced court official, although physically thousands of miles distant, his analysis is profound and forceful… this agrees with what I was thinking- eh? With One’s abilities could he have really not seen through such as simple ruse? And ask such a stupid question…* Xu Qi’an wrote:
 
-((THREE: If this is Emperor Yuanjing’s intention, then Wei Yuan can’t do anything, right? No matter what he would have to give up these subordinates.))
+【THREE: If this is Emperor Yuanjing’s intention, then Wei Yuan can’t do anything, right? No matter what he would have to give up these subordinates.】
 
-((FOUR: Hehe, this depends on the attitude between Emperor Yuanjing and Wei Yuan. If it is merely some corruption, then the punishment will not be significant, but there will definitely be a group of people expelled from the constabulary.))
+【FOUR: Hehe, this depends on the attitude between Emperor Yuanjing and Wei Yuan. If it is merely some corruption, then the punishment will not be significant, but there will definitely be a group of people expelled from the constabulary.】
 
 *Oh shuanggui[^1], is it…* Xu Qi’an suddenly became worried for his own future.
 
