--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -262,6 +262,9 @@
         <li><a href="./story/163.html">The Traitor's Hand</a></li>
         <li><a href="./story/164.html">A Startling Discovery</a></li>
         <li><a href="./story/165.html">An Opportunity to Turn the Tides</a></li>
+        <li><a href="./story/166.html">Xu Qi’an, the Flawless</a></li>
+        <li><a href="./story/167.html">Taking Sister and Auntie to See the House</a></li>
+        <li><a href="./story/168.html">Oh Lingyin, Don't Make Big Brother Drive</a></li>
     </ol>
 
     <hr>
