--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -265,6 +265,8 @@
         <li><a href="./story/166.html">Xu Qi’an, the Flawless</a></li>
         <li><a href="./story/167.html">Taking Sister and Auntie to See the House</a></li>
         <li><a href="./story/168.html">Oh Lingyin, Don't Make Big Brother Drive</a></li>
+        <li><a href="./story/169.html">Making a Simplified Chicken Bouillon</a></li>
+        <li><a href="./story/170.html">Not bad, now go...</a></li>
     </ol>
 
     <hr>
