--- a/baoyu/index.html
+++ b/baoyu/index.html
@@ -64,6 +64,10 @@
         <li><a href="./story/19.html">【道号梧桐・上】</a></li>
         <li><a href="./story/20.html">【道号梧桐・下】</a></li>
         <li><a href="./story/21.html">【弹指龙吟】</a></li>
+        <li><a href="./story/22.html">【峿山】</a></li>
+        <li><a href="./story/23.html">【朔月】</a></li>
+        <li><a href="./story/24.html">【常崎路】</a></li>
+        <li><a href="./story/25.html">【仙神遥兮】</a></li>
     </ol>
 
 </div>
