--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -267,6 +267,7 @@
         <li><a href="./story/168.html">Oh Lingyin, Don't Make Big Brother Drive</a></li>
         <li><a href="./story/169.html">Making a Simplified Chicken Bouillon</a></li>
         <li><a href="./story/170.html">Not bad, now go...</a></li>
+        <li><a href="./story/171.html">Lion's Roar</a></li>
     </ol>
 
     <hr>
