--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -268,6 +268,7 @@
         <li><a href="./story/169.html">Making a Simplified Chicken Bouillon</a></li>
         <li><a href="./story/170.html">Not bad, now go...</a></li>
         <li><a href="./story/171.html">Lion's Roar</a></li>
+        <li><a href="./story/172.html">There are None Like Me Upon this Land</a></li>
     </ol>
 
     <hr>
