--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -270,6 +270,7 @@
         <li><a href="./story/171.html">Lion's Roar</a></li>
         <li><a href="./story/172.html">There are None Like Me Upon this Land</a></li>
         <li><a href="./story/173.html">Haunted House</a></li>
+        <li><a href="./story/174.html">A Nearly Exposed Identity</a></li>
     </ol>
 
     <hr>
