--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -271,6 +271,7 @@
         <li><a href="./story/172.html">There are None Like Me Upon this Land</a></li>
         <li><a href="./story/173.html">Haunted House</a></li>
         <li><a href="./story/174.html">A Nearly Exposed Identity</a></li>
+        <li><a href="./story/175.html">Chicken Bouillon</a></li>
     </ol>
 
     <hr>
