--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -272,6 +272,7 @@
         <li><a href="./story/173.html">Haunted House</a></li>
         <li><a href="./story/174.html">A Nearly Exposed Identity</a></li>
         <li><a href="./story/175.html">Chicken Bouillon</a></li>
+        <li><a href="./story/176.html">Telling A Story</a></li>
     </ol>
 
     <hr>
@@ -282,14 +283,14 @@
 
     <footer>
         <p class="small">
-            "Where are all the cookies banners?" I hear or don't hear you ask. Well, there are none. I don't use cookies. There are no ads. 
+            "Where are all the cookies banners?" You may (or may not) ask. There are no cookies, no ads, trackers, only book.
         </p>
 
-        <p class="small">
+        <!-- <p class="small">
             Frankly I don't even have any site traffic analytics, which is something I probably <i>should</i> have, if I can be bothered. 
-        </p>
+        </p> -->
         <p class="small">
-            Please enjoy this book. I don't know from whence you came, or whither you are bound, but there's footers for support and socials etc at the bottom of chapter pages.
+            Please enjoy this book. If you want to support me I have links in chapter footers.
         </p> 
     </footer>
 
