--- a/index.html
+++ b/index.html
@@ -41,6 +41,19 @@
                 <a href="./dagengren/">大奉打更人：The Nightwatchers of Feng by 卖报小郞君</a>
             </li>
         </ul>
+
+        <!-- <footer>
+
+            <hr> 
+            <p class="small">
+                (NUF Name: Adrakaris)
+            </p>
+
+        </footer> -->
+
+        
     </div>
+
+    
 </body>
 </html>
