--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -273,6 +273,8 @@
         <li><a href="./story/174.html">A Nearly Exposed Identity</a></li>
         <li><a href="./story/175.html">Chicken Bouillon</a></li>
         <li><a href="./story/176.html">Telling A Story</a></li>
+        <li><a href="./story/176.html">Business Trip</a></li>
+        <li><a href="./story/176.html">One Must Be Discrete</a></li>
     </ol>
 
     <hr>
