--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -276,6 +276,7 @@
         <li><a href="./story/177.html">Business Trip</a></li>
         <li><a href="./story/178.html">One Must Be Discrete</a></li>
         <li><a href="./story/179.html">Leaving the Capital</a></li>
+        <li><a href="./story/180.html">Xu Xinnian: I Have No Family</a></li>
     </ol>
 
     <hr>
