--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -277,6 +277,7 @@
         <li><a href="./story/178.html">One Must Be Discrete</a></li>
         <li><a href="./story/179.html">Leaving the Capital</a></li>
         <li><a href="./story/180.html">Xu Xinnian: I Have No Family</a></li>
+        <li><a href="./story/181.html">Group Chats</a></li>
     </ol>
 
     <hr>
