--- a/baoyu/index.html
+++ b/baoyu/index.html
@@ -68,6 +68,9 @@
         <li><a href="./story/23.html">【朔月】</a></li>
         <li><a href="./story/24.html">【常崎路】</a></li>
         <li><a href="./story/25.html">【仙神遥兮】</a></li>
+        <li><a href="./story/26.html">【泰阳立上】</a></li>
+        <li><a href="./story/27.html">【泰阴处下】</a></li>
+        <li><a href="./story/28.html">【圣哉繁星】</a></li>
     </ol>
 
 </div>
