--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yanwenyuan.uk</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="icon" type="image/png" href="./style/DragonIconGreen.png">
 </head>
 <body>
     <div class="cbox">
