--- a/baoyu/story/25.html
+++ b/baoyu/story/25.html
@@ -73,9 +73,9 @@
 
 阳忠僵住，直勾勾地盯着那三行字，不由而念其词：
 
-<blockquote>仙神遥兮，路之岖崎。<br>
-    何谓天，何谓地，何谓道，何谓机？<br>
-    反天而步，能常行兮？</blockquote>
+> 仙神遥兮，路之岖崎。    
+> 何谓天，何谓地，何谓道，何谓机？    
+> 反天而步，能常行兮？
 
 胡贞、常仁番有同样的反应，三人长时未动。
 
