--- a/baoyu/story/26.html
+++ b/baoyu/story/26.html
@@ -35,7 +35,8 @@
 
 走了半个时辰，阳忠见前方万重山后有一座山突显于众，高到仿佛在撑住整个苍穹。再过一刻钟，他来到了这座山的山脚，只见又有一面峭壁，上面刻了两行闪烁的红黄篆字：
 
-<blockquote>泰阳立上，傲目凡世。<br>背之者诛，服之者奴。</blockquote>
+> 泰阳立上，傲目凡世。  
+> 背之者诛，服之者奴。  
 
 「泰阳立上……」阳忠喃喃道，仔细斟酌此词的含义。「这是下一关？可是这又是什么意思呢？」
 
