--- a/baoyu/index.html
+++ b/baoyu/index.html
@@ -71,6 +71,9 @@
         <li><a href="./story/26.html">【泰阳立上】</a></li>
         <li><a href="./story/27.html">【泰阴处下】</a></li>
         <li><a href="./story/28.html">【圣哉繁星】</a></li>
+        <li><a href="./story/29.html">【玄武府】</a></li>
+        <li><a href="./story/30.html">【姜觉】</a></li>
+        <li><a href="./story/31.html">【龙歌法天】</a></li>
     </ol>
 
 </div>
