--- a/baoyu/index.html
+++ b/baoyu/index.html
@@ -74,6 +74,9 @@
         <li><a href="./story/29.html">【玄武府】</a></li>
         <li><a href="./story/30.html">【姜觉】</a></li>
         <li><a href="./story/31.html">【龙歌法天】</a></li>
+        <li><a href="./story/32.html">【一人之纪】</a></li>
+        <li><a href="./story/33.html">【表匠】</a></li>
+        <li><a href="./story/34.html">【道书】</a></li>
     </ol>
 
 </div>
