--- a/baoyu/story/31.html
+++ b/baoyu/story/31.html
@@ -27,7 +27,7 @@
 <div class="double" id="double">
 # 龙歌法天
 
-桌上的两本书，乍一看都是普普通通的蓝皮书，但再仔细观察，却发现书页是丝绸，书皮是绢布，但最显眼的是条金黄布带，将书本紧紧绑住，不容人读。渺小咒文遍布金带，形成一个奥妙的禁制。
+桌上的两本书，乍一看都是普普通通的蓝皮书，但再仔细观察，却发现书页是丝绸，书皮是绢布，可最显眼的是条金黄布带，将书本紧紧绑住，不容人读。渺小咒文遍布金带，形成一个奥妙的禁制。
 
 当然金带没盖住标题，阳忠清清楚楚地看到了两书封面上的字：
 
