--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
         </p>
 
         <p>
-            Landing Page. This site is just meant to link to subsites. 
+            Landing Page. This site is just meant to link to subsites. <br>
+            是页只通往他页也。
         </p>
 
         <h3>Stuff</h3>
 
         <ul>
             <li>
-                <a href="./baoyu/">暴雨中：In Torrential Rains</a> 
+                <a href="./baoyu/">暴雨中：In Torrential Rains</a> (进行中)
             </li>
             <li>
-                <a href="./sixiazhuan/">四侠传：Legend of the Four Heroes</a> (name pending)
+                <a href="./sixiazhuan/">四侠传：Legend of the Four Heroes</a> (暂止)
             </li>
             
             <!-- <li>
