--- a/baoyu/index.html
+++ b/baoyu/index.html
@@ -77,6 +77,10 @@
         <li><a href="./story/32.html">【一人之纪】</a></li>
         <li><a href="./story/33.html">【表匠】</a></li>
         <li><a href="./story/34.html">【道书】</a></li>
+        <li><a href="./story/35.html">【炼金】</a></li>
+        <li><a href="./story/36.html">【许白翼】</a></li>
+        <li><a href="./story/37.html">【旧世都】</a></li>
+        <li><a href="./story/38.html">【莫忘之过】</a></li>
     </ol>
 
 </div>
