--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -278,6 +278,12 @@
         <li><a href="./story/179.html">Leaving the Capital</a></li>
         <li><a href="./story/180.html">Xu Xinnian: I Have No Family</a></li>
         <li><a href="./story/181.html">Group Chats</a></li>
+        <li><a href="./story/182.html">Number One's Identity?</a></li>
+        <li><a href="./story/183.html">Blood Glow</a></li>
+        <li><a href="./story/184.html">Barge Inspection</a></li>
+        <li><a href="./story/185.html">Embezzlement</a></li>
+        <li><a href="./story/186.html">Deduction</a></li>
+        <li><a href="./story/187.html">Missed by a Hair</a></li>
     </ol>
 
     <hr>
