--- a/dagengren/story/184.html
+++ b/dagengren/story/184.html
@@ -195,7 +195,7 @@ This anchored ship was also a government vessel, belonging to the Yuzhou governm
 
 "What are you doing?" Jiang Lyuzhong asked, glancing at the bearded man in Xu Qi'an's hand.
 
-He immediately recognized the uniform of the Transport Office.
+He immediately recognised the uniform of the Transport Office.
 
 "This ship has a problem, but it's hard to say exactly what," Xu Qi'an explained.
 
