--- a/dagengren/story/185.html
+++ b/dagengren/story/185.html
@@ -75,7 +75,7 @@ Jiang Lyuzhong nodded, looked at the bearded man disguised as a Transport Office
 
 The awakening process was rough. Zhu Guangxiao slapped the bearded man awake, causing him to moan in agony.
 
-This man, disguised as a Transport Office constable, scanned his surroundings and quickly realized his predicament, his face turning ashen.
+This man, disguised as a Transport Office constable, scanned his surroundings and quickly realised his predicament, his face turning ashen.
 
 He still couldn't believe that he had been exposed. Where did it go wrong?
 
@@ -161,7 +161,7 @@ The Qi clique was massively supplying Yunzhou with military necessities, and now
 
 If it was just supporting bandits, why go to such lengths?
 
-Realizing this, Inspector Zhang stood up and paced the room, glancing occasionally at Jiang Lyuzhong and Xu Qi'an.
+Realising this, Inspector Zhang stood up and paced the room, glancing occasionally at Jiang Lyuzhong and Xu Qi'an.
 
 "Xu Ningyan, you've given me another headache... encountering this matter will undoubtedly delay our journey."
 
