--- a/dagengren/story/186.html
+++ b/dagengren/story/186.html
@@ -41,7 +41,7 @@ There was no doubt about it — it was Emperor Yuanjing.
 
 There were many emperors in history who sold official positions, and Emperor Yuanjing was not an exception. These emperors all had one thing in common: they spent money like water.
 
-And the historical evaluation of such emperors was generally not favourable, with their actions often being criticized.
+And the historical evaluation of such emperors was generally not favourable, with their actions often being criticised.
 
 The Yuzhou Transport Office came into view, and seeing a large group approaching with a high-ranking official in a crimson robe and a Gold Gong carrying Nightwatcher, the runners rushed to report the matter, not even daring to question them.
 
