--- a/dagengren/story/187.html
+++ b/dagengren/story/187.html
@@ -29,7 +29,7 @@
 
 *We urged her a myriad times until she appeared, with half her face hiding behind the Pipa still.*
 
-*When Bai Juyi wrote this line, did he perhaps mean to subtly criticize the pipa player for being overly pretentious?*
+*When Bai Juyi wrote this line, did he perhaps mean to subtly criticise the pipa player for being overly pretentious?*
 
 Xu Qi'an felt that the oiran named Hongxiu was rather pretentious, or perhaps she held herself in high regard. She arrived fashionably late to the tea gathering, and with a lukewarm smile, she raised her wine cup and said:
 
@@ -169,7 +169,7 @@ She naturally sat beside the white-robed Young Master Wei. Young scholars passio
 
 At such moments, she felt immense envy towards that unseen yet famous courtesan from the capital, Fuxiang.
 
-How fortunate one must be to meet such a talented scholar and have poetry written about them, immortalizing their name.
+How fortunate one must be to meet such a talented scholar and have poetry written about them, immortalising their name.
 
 "A few officials from the capital were here just now, they seemed to be Nightwatchers," Hongxiu chatted about it while pouring wine for Young Master Wei, laughing, "One of them even claimed that Fuxiang, the capital's top courtesan, is his lover."
 
@@ -197,7 +197,7 @@ After a while, Young Master Wei silenced the crowd by raising his hand. Shaking 
 
 "What?!" The crowd was astonished and then suddenly understood.
 
-No wonder the literary circles didn't publicize the poet's identity. It was mutually agreed to forget about it, because he was a Nightwatcher, not a scholar.
+No wonder the literary circles didn't publicise the poet's identity. It was mutually agreed to forget about it, because he was a Nightwatcher, not a scholar.
 
 *Nightwatcher...* the speaker said it casually, but the listener took it to heart. Hongxiu's heart sank.
 
