--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -284,6 +284,8 @@
         <li><a href="./story/185.html">Embezzlement</a></li>
         <li><a href="./story/186.html">Deduction</a></li>
         <li><a href="./story/187.html">Missed by a Hair</a></li>
+        <li><a href="./story/188.html">An Old Friend From Qingzhou?</a></li>
+        <li><a href="./story/189.html">This Little Sir Is...</a></li>
     </ol>
 
     <hr>
