--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -286,6 +286,8 @@
         <li><a href="./story/187.html">Missed by a Hair</a></li>
         <li><a href="./story/188.html">An Old Friend From Qingzhou?</a></li>
         <li><a href="./story/189.html">This Little Sir Is...</a></li>
+        <li><a href="./story/190.html">A Poem that Stuns the Masses</a></li>
+        <li><a href="./story/191.html">Xu Qi'an's Seven Letters</a></li>
     </ol>
 
     <hr>
