--- a/dagengren/story/189.html
+++ b/dagengren/story/189.html
@@ -199,7 +199,7 @@ The central figures at the banquet were Commissioner Yang Gong and Inspector Zha
 
 Xu Qi'an thought he would be treated similarly and enjoyed the idea of being free from social obligations.
 
-Unexpectedly, an official in a scarlet robe embroidered with cloud geese raised his glass towards Xu Qi'an and tentatively asked, "Is this young sir the poet of '*Delicate, tilting branches reflected on clear and shallow water; its subtle fragrance drifts with the rising moon at dusk.*'?"
+Unexpectedly, an official in a scarlet robe embroidered with cloud geese raised his glass towards Xu Qi'an and tentatively asked, "Is this little sir the poet of '*Delicate, tilting branches reflected on clear and shallow water; its subtle fragrance drifts with the rising moon at dusk.*'?"
 
 -----
 
