--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <li>
                 <a href="./baoyu/">暴雨中：In Torrential Rains</a> (进行中)
             </li>
+            <!-- <li>
+                <a href="./shenhaixiantan/">神海閑談：Tall Tales from the Celestial Sea</a> (暂止)
+            </li> -->
             <li>
                 <a href="./sixiazhuan/">四侠传：Legend of the Four Heroes</a> (暂止)
             </li>
