--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -288,6 +288,8 @@
         <li><a href="./story/189.html">This Little Sir Is...</a></li>
         <li><a href="./story/190.html">A Poem that Stuns the Masses</a></li>
         <li><a href="./story/191.html">Xu Qi'an's Seven Letters</a></li>
+        <li><a href="./story/192.html">Slay an Enemy</a></li>
+        <li><a href="./story/193.html">Survivor</a></li>
     </ol>
 
     <hr>
