--- a/dagengren/story/193.html
+++ b/dagengren/story/193.html
@@ -25,7 +25,7 @@
 </div>
 
 <div class="double" id="double">
-# 193. Survivor
+# 193. Widow
 
 Stepping into the stirrups, Xu Qi'an's warhorse from the Qingzhou barracks let out a distressed whinny and knelt on all fours as Xu Qi'an soared like a great bird into the dense forest.
 
