--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -290,6 +290,8 @@
         <li><a href="./story/191.html">Xu Qi'an's Seven Letters</a></li>
         <li><a href="./story/192.html">Slay an Enemy</a></li>
         <li><a href="./story/193.html">Widow</a></li>
+        <li><a href="./story/193.html">Foolish Lin'an Still Has Her Uses</a></li>
+        <li><a href="./story/193.html">This is the Prefecture Government</a></li>
     </ol>
 
     <hr>
