shen hai xian tan

--- a/index.html
+++ b/index.html
@@ -21,29 +21,35 @@
             是页只通往他页也。
         </p>
 
-        <h3>Stuff</h3>
+        <h3>故事 Creations</h3>
 
         <ul>
             <li>
                 <a href="./baoyu/">暴雨中：In Torrential Rains</a> (进行中)
             </li>
-            <!-- <li>
-                <a href="./shenhaixiantan/">神海閑談：Tall Tales from the Celestial Sea</a> (暂止)
-            </li> -->
             <li>
-                <a href="./sixiazhuan/">四侠传：Legend of the Four Heroes</a> (暂止)
+                <a href="./shxt/">神海閑談：Tall Tales from the Celestial Sea</a>
             </li>
+            
             
             <!-- <li>
                 <a href="./laolongcheng/">夕阳通天〔老龙城〕：Light of Dusk Fills the Heavens</a> (name tentative)
             </li> -->
         </ul>
 
-        <h3>Translations</h3>
+        <h3>翻译 Translations</h3>
 
         <ul>
             <li>
-                <a href="./dagengren/">大奉打更人：The Nightwatchers of Feng by 卖报小郞君</a>
+                <a href="./dagengren/">大奉打更人：The Nightwatchers of Feng by 卖报小郞君</a> (ongoing)
+            </li>
+        </ul>
+
+        <h3>旧作 Old Projects</h3>
+
+        <ul>
+            <li>
+                <a href="./sixiazhuan/">四侠传：Legend of the Four Heroes</a> (暂止)
             </li>
         </ul>
 
