--- a/shxt/index.html
+++ b/shxt/index.html
@@ -55,7 +55,7 @@
     </style>
 
     <div class="cbox">
-        <h1>《神海閑談》</h1>
+        <h1>神海閑談</h1>
         <p><i>Tall tales from the Celestial Sea</i>・文言玄幻故事・燕文院・著</p>
 
 
