--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -292,6 +292,8 @@
         <li><a href="./story/193.html">Widow</a></li>
         <li><a href="./story/194.html">Foolish Lin'an Still Has Her Uses</a></li>
         <li><a href="./story/195.html">This is the Prefecture Government</a></li>
+        <li><a href="./story/196.html">Analysing the Case</a></li>
+        <li><a href="./story/197.html">Solving the Mystery</a></li>
     </ol>
 
     <hr>
