--- a/baoyu/story/33.html
+++ b/baoyu/story/33.html
@@ -68,7 +68,7 @@
 
 > 【凛凛之夜，凄凄是年，若凶怀身，长而难眠。忽闻泣声于父母之屋，如寒雪独花，周众皆萎，見己极来而无能免。不忍卧受，故往窃视之。母面红肿，紧持父手，泪下如雨，又不敢大泣。
 > 
-> 还而长器：呜乎！父去安生也？往路暗也哉！来又何能……永恒太阳哉！世间之善，洁白之光，请佑我父！退亡界之恶魔，去之缠缠死念！来惧矣，又恨无能，请圣日恩光守我家……】
+> 还而长哭：呜乎！父去安生也？往路暗也哉！来又何能……永恒太阳哉！世间之善，洁白之光，请佑我父！退亡界之恶魔，去之缠缠死念！来惧矣，又恨无能，请圣日恩光守我家……】
 
 不知能做什么，就向太阳祈祷。结果月许后，父亲真起来了。全家都欢快无比，可是很快发现了一件事，差点又将天垮下来了。
 
