--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -294,6 +294,8 @@
         <li><a href="./story/195.html">This is the Prefecture Government</a></li>
         <li><a href="./story/196.html">Analysing the Case</a></li>
         <li><a href="./story/197.html">Solving the Mystery</a></li>
+        <li><a href="./story/198.html">Another Brainstorming Session</a></li>
+        <li><a href="./story/199.html">Feasts and Loquats</a></li>
     </ol>
 
     <hr>
