--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -296,6 +296,8 @@
         <li><a href="./story/197.html">Solving the Mystery</a></li>
         <li><a href="./story/198.html">Another Brainstorming Session</a></li>
         <li><a href="./story/199.html">Feasts and Loquats</a></li>
+        <li><a href="./story/200.html">Number Two's Questions</a></li>
+        <li><a href="./story/201.html">FOUR: I Have Deduced Who THREE Really Is</a></li>
     </ol>
 
     <hr>
