--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -298,8 +298,10 @@
         <li><a href="./story/199.html">Feasts and Loquats</a></li>
         <li><a href="./story/200.html">Number Two's Questions</a></li>
         <li><a href="./story/201.html">FOUR: I Have Deduced Who THREE Really Is</a></li>
-        <li><a href="./story/202.html">Heh, Women</a></li>
-        <li><a href="./story/203.html">Interrogation</a></li>
+        <li><a href="./story/202.html">Seduction</a></li>
+        <li><a href="./story/203.html">Heh, Women</a></li>
+        <li><a href="./story/204.html">Interrogation</a></li>
+        <li><a href="./story/205.html">Echoes of the Inscription</a></li>
     </ol>
 
     <hr>
