--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -302,6 +302,8 @@
         <li><a href="./story/203.html">Heh, Women</a></li>
         <li><a href="./story/204.html">Interrogation</a></li>
         <li><a href="./story/205.html">Echoes of the Inscription</a></li>
+        <li><a href="./story/206.html">Scoundrel</a></li>
+        <li><a href="./story/207.html">The Princesses Should've Received my Love Texts Now</a></li>
     </ol>
 
     <hr>
