--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -304,6 +304,8 @@
         <li><a href="./story/205.html">Echoes of the Inscription</a></li>
         <li><a href="./story/206.html">Scoundrel</a></li>
         <li><a href="./story/207.html">The Princesses Should've Received my Love Texts Now</a></li>
+        <li><a href="./story/208.html">Letters</a></li>
+        <li><a href="./story/207.html">The Dogmeat Store</a></li>
     </ol>
 
     <hr>
