--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -305,7 +305,9 @@
         <li><a href="./story/206.html">Scoundrel</a></li>
         <li><a href="./story/207.html">The Princesses Should've Received my Love Texts Now</a></li>
         <li><a href="./story/208.html">Letters</a></li>
-        <li><a href="./story/207.html">The Dogmeat Store</a></li>
+        <li><a href="./story/209.html">The Dogmeat Store</a></li>
+        <li><a href="./story/210.html">Whoever Hung the Bell Should Unite It</a></li>
+        <li><a href="./story/211.html">Social Death</a></li>
     </ol>
 
     <hr>
