--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -308,6 +308,10 @@
         <li><a href="./story/209.html">The Dogmeat Store</a></li>
         <li><a href="./story/210.html">Whoever Hung the Bell Should Unite It</a></li>
         <li><a href="./story/211.html">Social Death</a></li>
+        <li><a href="./story/212.html">The Return</a></li>
+        <li><a href="./story/213.html">Wanted</a></li>
+        <li><a href="./story/214.html">Xu Qi'an: I Didn't Do It</a></li>
+        <li><a href="./story/215.html">Shock</a></li>
     </ol>
 
     <hr>
