--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -312,6 +312,8 @@
         <li><a href="./story/213.html">Wanted</a></li>
         <li><a href="./story/214.html">Xu Qi'an: I Didn't Do It</a></li>
         <li><a href="./story/215.html">Shock</a></li>
+        <li><a href="./story/216.html">The Plot Thickens</a></li>
+        <li><a href="./story/217.html">Dream World</a></li>
     </ol>
 
     <hr>
