--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -314,6 +314,8 @@
         <li><a href="./story/215.html">Shock</a></li>
         <li><a href="./story/216.html">The Plot Thickens</a></li>
         <li><a href="./story/217.html">Dream World</a></li>
+        <li><a href="./story/218.html">Bravo, Number Two!</a></li>
+        <li><a href="./story/219.html">Well Pleased</a></li>
     </ol>
 
     <hr>
