--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -316,6 +316,8 @@
         <li><a href="./story/217.html">Dream World</a></li>
         <li><a href="./story/218.html">Bravo, Number Two!</a></li>
         <li><a href="./story/219.html">Well Pleased</a></li>
+        <li><a href="./story/220.html">Trust Between People</a></li>
+        <li><a href="./story/221.html">This Official is Xu Qi'an</a></li>
     </ol>
 
     <hr>
