--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -318,6 +318,7 @@
         <li><a href="./story/219.html">Well Pleased</a></li>
         <li><a href="./story/220.html">Trust Between People</a></li>
         <li><a href="./story/221.html">This Official is Xu Qi'an</a></li>
+        <li><a href="./story/222.html">Platitudes and Hostilities</a></li>
     </ol>
 
     <hr>
