--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -319,6 +319,8 @@
         <li><a href="./story/220.html">Trust Between People</a></li>
         <li><a href="./story/221.html">This Official is Xu Qi'an</a></li>
         <li><a href="./story/222.html">Platitudes and Hostilities</a></li>
+        <li><a href="./story/223.html">Wanted by Court</a></li>
+        <li><a href="./story/224.html">Suicide to Escape Punishment</a></li>
     </ol>
 
     <hr>
