--- a/dagengren/story/222.html
+++ b/dagengren/story/222.html
@@ -67,7 +67,7 @@ Seeing both sides turning their gazes toward her, Li Miaozhen pondered for a mom
 
 Yang Chuannan was her comrade, and naturally, Li Miaozhen's heart was with him. However, resolving problems required proper methods. If military interventions could work, Li Miaozhen would have tried it long ago.
 
-But the problem was that it wouldn't work. The Military Command could only mobilize the "City Garrison Command" under Baidi City. Although the garrisons in the rest of Yunzhou were nominally under the Military Command commission, the latter did not have the authority to give orders to the former. During wartime, the court would appoint generals temporarily.
+But the problem was that it wouldn't work. The Military Command could only mobilise the "City Garrison Command" under Baidi City. Although the garrisons in the rest of Yunzhou were nominally under the Military Command commission, the latter did not have the authority to give orders to the former. During wartime, the court would appoint generals temporarily.
 
 Due to these limitations, Li Miaozhen's Flying Swallow Army came into being.
 
@@ -171,7 +171,7 @@ Inspector Zhang was taken aback. He indeed slowed down, reining in his horse to 
 
 Jiang Lyuzhong, being a high-ranking martial artist, would sense if there was a fierce battle outside the city.
 
-"It seems the situation is relatively stable," Inspector Zhang breathed a sigh of relief, then looked at Xu Ningyan with newfound respect, "Did Xu Ningyan stabilize the situation?"
+"It seems the situation is relatively stable," Inspector Zhang breathed a sigh of relief, then looked at Xu Ningyan with newfound respect, "Did Xu Ningyan stabilise the situation?"
 
 Jiang Lyuzhong shook his head, "We'll find out when we get to the south gate."
 
@@ -179,7 +179,7 @@ Half an incense stick later, they saw the outline of the city wall. Inspector Zh
 
 Inspector Zhang urged his horse forward, reining it in at the foot of the city wall. He lifted the hem of his official robe and hurriedly climbed the stairs.
 
-His crimson official robe symbolized his status, and no one dared to stop him.
+His crimson official robe symbolised his status, and no one dared to stop him.
 
 "Inspector, you're finally here."
 
@@ -267,19 +267,19 @@ Inspector Zhang continued calmly, "Once they're out of the camp, kill them all, 
 
 Looking at the Inspector's sudden turn of face, Xu Qi'an felt as if he had swallowed a dead rat, finding it hard to describe his feelings.
 
-Inspector Zhang seemed not to hear and went on, "Without their leaders, the regular soldiers will be a disorganized rabble, easily pacified. Yang Chuannan's key supporters are the three to five thousand soldiers of the Guard Command. Eliminating this threat will make dealing with Yang Chuannan worry-free."
+Inspector Zhang seemed not to hear and went on, "Without their leaders, the regular soldiers will be a disorganised rabble, easily pacified. Yang Chuannan's key supporters are the three to five thousand soldiers of the Guard Command. Eliminating this threat will make dealing with Yang Chuannan worry-free."
 
 "But this case clearly has other hidden aspects," Xu Qi'an said in a serious tone.
 
 "That's another matter. If the truth comes out, I'll clear Yang Chuannan's name. But Xu Huchen's rebellious intent is firm, and I must nip it in the bud," Inspector Zhang said softly, "I will summon troops from the various guard units in Yunzhou. This won't happen again."
 
-The Inspector had the authority to mobilize troops from the garrisons.
+The Inspector had the authority to mobilise troops from the garrisons.
 
 After giving his instructions, Inspector Zhang glanced at Xu Qi'an and sneered, "Ningyan, kindness doesn't command troops. Whether in court or on the battlefield, hesitation leads to defeat. Soft-heartedness harms both oneself and others."
 
 *I understand the reasoning...* Xu Qi'an sighed silently.
 
-Having weathered many storms, Jiang Lyuzhong remained unfazed and asked, "Mobilizing troops from various garrisons—Inspector, are you planning to use this incident to suppress Yunzhou's officialdom?"
+Having weathered many storms, Jiang Lyuzhong remained unfazed and asked, "Mobilising troops from various garrisons—Inspector, are you planning to use this incident to suppress Yunzhou's officialdom?"
 
 Inspector Zhang nodded slowly, "If Yang Chuannan isn't the mastermind, then the real culprit is in the city. Any official of fourth rank or above is suspect. I'm making preparations to prevent them from acting desperately."
 
@@ -301,7 +301,7 @@ The garrison troops had just withdrawn, and they were already eager to pressure 
 
 It could only mean that Liang Youping had found no leads, making them anxious to push Yang Chuannan out as a scapegoat.
 
-*The more anxious they are, the more likely they are to reveal themselves… Once Jiang slaughters Xu Huchen and the other leaders, and troops from the guard units are mobilized, the Inspector will be secure and can take his time dealing with the mastermind. So, stalling for now is sufficient…* Xu Qi'an's thoughts raced.
+*The more anxious they are, the more likely they are to reveal themselves… Once Jiang slaughters Xu Huchen and the other leaders, and troops from the guard units are mobilised, the Inspector will be secure and can take his time dealing with the mastermind. So, stalling for now is sufficient…* Xu Qi'an's thoughts raced.
 
 Sure enough, Inspector Zhang agreed to the officials' demands but claimed he needed to interrogate Yang Chuannan in private today and would hold a formal trial tomorrow.
 
@@ -309,7 +309,7 @@ He just needed to get through today.
 
 After dismissing the officials, Inspector Zhang sipped his tea and sighed, "Our time is running short."
 
-Killing Xu Huchen would stabilize the Yang Chuannan line, while mobilizing troops would secure the line against the real mastermind. Once the truth was revealed, the mastermind would undoubtedly resort to desperate measures.
+Killing Xu Huchen would stabilise the Yang Chuannan line, while mobilising troops would secure the line against the real mastermind. Once the truth was revealed, the mastermind would undoubtedly resort to desperate measures.
 
 Xu Qi'an pondered, "After Gold Gong Jiang completes his task tonight, we can have someone disguise themselves as Liang Youping to lure the snake out of its nest."
 
