--- a/dagengren/index.html
+++ b/dagengren/index.html
@@ -321,6 +321,8 @@
         <li><a href="./story/222.html">Platitudes and Hostilities</a></li>
         <li><a href="./story/223.html">Wanted by Court</a></li>
         <li><a href="./story/224.html">Suicide to Escape Punishment</a></li>
+        <li><a href="./story/225.html">Xu Qi'an's Helpless Choice</a></li>
+        <li><a href="./story/226.html">Come the Warlock of Dreams</a></li>
     </ol>
 
     <hr>
